Add source attribute
